--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <div class="row justify-content-center">
             <div class="col-md-10 col-lg-8">
                 <div class="calculator-card">
-                    <h1 class="text-center mb-4">이자 계산기</h1>
+                    <h1 class="text-center mb-4">💰 이자 계산기 💰</h1>
                     
                     <!-- 입력 폼 -->
                     <div class="input-section">
                         <div class="row g-3">
                             <div class="col-12">
                                 <label for="loanAmount" class="form-label">대출금액</label>
-                                <input type="text" class="form-control" id="loanAmount" value="10,000,000원" min="1" data-has-unit="true">
+                                <input type="text" class="form-control" id="loanAmount" value="10,000,000 원" min="1" data-has-unit="true">
                                 <div class="quick-amount-buttons mt-2">
                                     <button type="button" class="btn btn-outline-primary btn-sm" data-amount="1000000">+100만원</button>
                                     <button type="button" class="btn btn-outline-primary btn-sm" data-amount="10000000">+1,000만원</button>
@@ -29,12 +29,12 @@
                                 </div>
                             </div>
                             <div class="col-12">
-                                <label for="interestRate" class="form-label">연이율 (%)</label>
-                                <input type="number" class="form-control" id="interestRate" value="3.5" step="0.1" min="0.1" max="20">
+                                <label for="interestRate" class="form-label">연이율</label>
+                                <input type="text" class="form-control" id="interestRate" value="3.5 %" step="0.1" min="0.1" max="20" data-has-unit="true">
                             </div>
                             <div class="col-12">
-                                <label for="loanTerm" class="form-label">대출기간 (년)</label>
-                                <input type="number" class="form-control" id="loanTerm" value="10" min="1" max="30">
+                                <label for="loanTerm" class="form-label">대출기간</label>
+                                <input type="text" class="form-control" id="loanTerm" value="120 개월" min="1" max="360" data-has-unit="true">
                             </div>
                             <div class="col-12">
                                 <label for="repaymentType" class="form-label">상환방법</label>
